--- a/src/main/resources/application .yml
+++ b/src/main/resources/application .yml
@@ -6,7 +6,7 @@ server:
   #servlet:
     #context-path: /springboot_day1 #修改项目名 注意:项目名必须 "/" 开头
 
-# 激活那个环境配置
+# 激活那个环境配置1
 spring:
   profiles:
     active: prod #让dev环境生效
